--- a/section-7/package.json
+++ b/section-7/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "mongodb": "^4.1.4"
+    "mongodb": "^4.1.4",
+    "mongoose": "^6.0.12"
   }
 }
