--- a/CMS-PROJECT/package.json
+++ b/CMS-PROJECT/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "express-handlebars": "^6.0.1"
+    "express-handlebars": "^6.0.1",
+    "mongoose": "^6.0.13"
   }
 }
