--- a/CMS-PROJECT/package.json
+++ b/CMS-PROJECT/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-handlebars": "^6.0.1",
+    "method-override": "^3.0.0",
     "mongoose": "^6.0.13"
   }
 }
